src/scss/app.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@import './partials/variables';

// * {
//     margin: 0;
//     padding: 0;
//     box-sizing: border-box;
// }

body {
    user-select: none;
}

h1 {
    color: $base-color;
}

#jump-button {
    position: fixed;
    display: none;
    color: white;
    border-color: currentColor;
    border: 1px solid;
    width: 80px;
    line-height: 80px;
    border-radius: 999px;
    position: fixed;
    bottom: 50px;
    right: 50px;
    z-index: 999;
}

.help {
    position: fixed;
    left: 50vw;
    top: 65vh;
    transform: translate(-50%,-50%);
    opacity: 0;
    width: 100%;
    text-align: center;
    font-size: calc(2vw + 15px);
    color: white;
    font-weight: 700;
    display: block;
}

.only-lg {
    display: none;
}

@media screen AND (min-width: 891px) {
    #jump-button {
        display: none;
    }

    .help {
        font-size: calc(2vw + 15px);
        color: white;
        font-weight: 700;
        display: block;
        
    }

    .only-lg {
        display: inline;
    }
}

